test/tests/stages/18_structures/invalid_types/extra_credit/incompatible_union_types/union_branch_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[48]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u1)
  {
  int
  identifier(a)
  ;
  }
  ;
  union
  identifier(u2)
  {
  int
  identifier(a)
  ;
  }
  ;
  union
  identifier(u1)
  identifier(x)
  =
  {
  const int(10)
  }
  ;
  union
  identifier(u2)
  identifier(y)
  =
  {
  const int(11)
  }
  ;
  const int(1)
  ?
  identifier(x)
  :
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
